<resources>
    <string name="app_name">Eater Atlas</string>
    <string name="title_activity_maps">Eater Atlas</string>
    <string name="default_panel_text">Tap a marker</string>
    <string name="firebase">https://food-trucks.firebaseio.com/v3_0</string>
    <string name="rationale">
        <![CDATA[
            <b>Location Access Needed</b>
            <br/><br/>
            Location data is used to find nearby trucks and will never be shared.
        ]]>
    </string>
    <string name="source_info">
        <![CDATA[
            Open hours for this truck are estimates only and were graciously provided by
        ]]>
    </string>
    <string name="anchor">0.5</string>
    <string name="drawer_city">Cities</string>
    <string name="drawer_weekdays">Weekdays</string>
    <string name="drawer_meals">Meals</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_description">Navigation drawer</string>
    <string name="menu_description">Menu</string>
    <string name="menu_location_description">Last location</string>
    <string name="menu_meal_default">Meal</string>
    <string name="menu_day_default">Day</string>
    <string name="splash_description">Splash screen</string>

    <string name="weekday_picker_header">Weekdays</string>
    <string name="meal_picker_header">Meals</string>

    <string name="StreetFood">http://streetfoodapp.com/api</string>
    <string name="CityOfBoston">http://www.cityofboston.gov/foodtrucks/schedule-tabs.asp</string>
</resources>
