<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Main content view -->
    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:gravity="bottom"
        android:id="@+id/panel"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        sothree:umanoAnchorPoint="@string/anchor"
        sothree:umanoFadeColor="@android:color/transparent"
        sothree:umanoPanelHeight="68dp"
        xmlns:sothree="http://schemas.android.com/apk/res-auto">
        <!-- sothree:umanoParalaxOffset="300dp" > -->

        <!-- Google Map -->
        <fragment
            android:id="@+id/map"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:context=".activities.MapsActivity"
            tools:layout="@android:layout/simple_gallery_item">

            <!-- Top Menu -->
            <LinearLayout
                android:id="@+id/menu"
                android:background="@drawable/search"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <!-- Menu Button -->
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    app:mrl_rippleColor="@color/orange">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:id="@+id/menu_drawer"
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent"
                        android:src="@drawable/ic_menu"
                        android:contentDescription="@string/menu_description" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <!-- Weekday of Week Button -->
                <LinearLayout
                    android:id="@+id/menu_weekday"
                    android:background="@drawable/search_item"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:id="@+id/menu_weekday_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/sand"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/drawer_weekdays" />

                </LinearLayout>

                <!-- Meal Button -->
                <LinearLayout
                    android:id="@+id/menu_meal"
                    android:background="@drawable/search_item"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:id="@+id/menu_meal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/sand"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/drawer_meals" />

                </LinearLayout>

                <!-- Current Location Button -->
                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/menu_my_location"
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent"
                        android:background="@drawable/menu_selector"
                        android:src="@drawable/ic_my_location"
                        android:contentDescription="@string/menu_location_description" />
                </LinearLayout>
            </LinearLayout>
        </fragment>

        <!-- Bottom SlidingUpPanel -->
        <LinearLayout
            android:elevation="@dimen/panel_elevation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/panel_title"
            android:background="@color/green"
            android:orientation="vertical">

            <!-- Panel Header -->
            <LinearLayout
                android:id="@+id/panel_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/panel_header_padding"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:padding="@dimen/panel_header_text_title_padding"
                    android:orientation="vertical">

                    <!-- Panel container -->
                    <LinearLayout
                        android:id="@+id/panel_header_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <!-- Panel Title -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/panel_header_text_title_height"
                            android:id="@+id/panel_header_title"
                            android:gravity="start"
                            android:textSize="@dimen/panel_header_title_text_size"
                            android:textColor="@color/lightGreen"
                            android:textStyle="bold"/>

                        <!-- Panel Subtitle -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/panel_header_text_subtitle_height"
                            android:gravity="start"
                            android:textSize="@dimen/panel_header_subtitle_text_size"
                            android:id="@+id/panel_header_subtitle"
                            android:textColor="@color/lightGreen"/>
                    </LinearLayout>

                    <!-- Panel Default -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/panel_header_title_default"
                        android:gravity="center"
                        android:text="@string/default_panel_text"
                        android:textSize="@dimen/panel_header_title_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/lightGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/fab"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/map_marker"
                        android:contentDescription="@string/default_panel_text" />
                </LinearLayout>
            </LinearLayout>

            <!-- Panel body -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/panel_body"
                android:background="@color/darkGreen">

                <!-- Truck List -->
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/panel_list"
                    android:theme="@style/PanelTheme"
                    android:divider="@null" />

                <!-- Gig Info -->
                <LinearLayout
                    android:id="@+id/panel_gig"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <!-- Gig Info Card -->
                    <android.support.v7.widget.CardView
                        android:layout_gravity="center|top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="2dp"
                        app:cardBackgroundColor="@color/sand"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/orange">

                            <!-- Site -->
                            <com.balysv.materialripple.MaterialRippleLayout
                                android:id="@+id/site_ripple"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:mrl_rippleColor="@color/sand">

                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:padding="10dp"
                                    android:gravity="center|start"
                                    android:textColor="@color/sand"
                                    android:textSize="16sp"
                                    android:id="@+id/site_text"
                                    android:drawableEnd="@drawable/ic_open_in_browser"/>
                            </com.balysv.materialripple.MaterialRippleLayout>

                            <!-- Info -->
                            <ListView
                                android:id="@+id/gig_list"
                                android:background="@color/sand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:divider="@null"
                                android:listSelector="@android:color/transparent"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

    <!-- Picker shade -->
    <LinearLayout
        android:id="@+id/picker_shade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="vertical"
        android:visibility="gone" />

    <!-- Splash screen -->
    <RelativeLayout
        android:id="@+id/splash"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/orange" >

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:src="@drawable/burger"
            android:contentDescription="@string/splash_description" />
    </RelativeLayout>

    <!-- Navigation drawer -->
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:orientation="vertical"
        android:background="@color/sand">

        <!-- Menu header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/orange"
            android:paddingTop="34dp"
            android:paddingBottom="10dp"
            android:elevation="2dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/burger"
                android:contentDescription="@string/drawer_description" />

        </LinearLayout>

        <!-- Menu options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- City -->
            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/drawer_city"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:mrl_rippleColor="@color/orange">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_place"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="center|start"
                    android:textColor="@color/medGreen"
                    android:text="@string/drawer_city"/>
            </com.balysv.materialripple.MaterialRippleLayout>

            <!-- Weekday -->
            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/drawer_weekday"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:mrl_rippleColor="@color/orange">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_today"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="center|start"
                    android:textColor="@color/medGreen"
                    android:text="@string/drawer_weekdays"/>
            </com.balysv.materialripple.MaterialRippleLayout>

            <!-- Meal -->
            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/drawer_meal"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:mrl_rippleColor="@color/orange">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_schedule"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="center|start"
                    android:textColor="@color/medGreen"
                    android:text="@string/drawer_meals"/>
            </com.balysv.materialripple.MaterialRippleLayout>

            <!-- Settings -->
            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/drawer_settings"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:visibility="gone"
                app:mrl_rippleColor="@color/orange">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_settings"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="center|start"
                    android:textColor="@color/medGreen"
                    android:text="@string/drawer_settings"/>
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>